src/main/resources/k8s/service-rest-api.yml
apiVersion: v1
kind: Service
metadata:
  name: math-operations-service
spec:
  selector:
    app: math-operations-api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
