src/main/resources/k8s/ingress-rest-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: math-operations-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: math-operations-service
                port:
                  number: 8080
